--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,9 @@ img{
 /* header style */
 .header{
   border-bottom: 1px solid #e7e9fc;
+  box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container{
@@ -57,15 +60,17 @@ img{
 }
 
 .logo{
+  position: relative;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color:#4d5ae5;
+  color: #404bbf;;
   margin-right: 76px;
 }
+
 
 .header-list{
   display: flex;
@@ -98,11 +103,28 @@ img{
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: inline-block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
 .header-link:focus {
   color: #404bbf;
+}
+
+.link_current {
+  color: var(--ocean);
+  position: relative;
+}
+
+.link_current::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .header-adress {
@@ -122,6 +144,7 @@ img{
   color: #434455;
   padding: 24px 0;
   display: inline-block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-link:hover,
@@ -137,6 +160,9 @@ img{
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
   rgba(46, 47, 66, 0.7)), url(../images/main-background.jpg);
   background-size: cover;
+  background-position: center; 
+  background-repeat: no-repeat;
+  max-width: 1440px;
 }
 
 .hero-title {
@@ -164,6 +190,7 @@ img{
   color: #ffffff;
   cursor: pointer;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .hero-button:hover,
@@ -193,13 +220,19 @@ img{
 .features-box{
   width: 264px;
   height: 112px;
-  background-color: #f5f4fa;
   text-align: center;
-  padding-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 .features-icon{
   display: inline-block;
+  width: 64px;
+  height: 64px;
 }
 
 .fetures-item{
@@ -276,6 +309,9 @@ img{
   width: calc((100% - 72px) / 4);
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-container{
   padding: 32px 0;
