--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ img{
   background-size: cover;
   background-position: center; 
   background-repeat: no-repeat;
-  max-width: 1440px;
+  /* max-width: 1440px; */
 }
 
 .hero-title {
@@ -335,10 +335,9 @@ img{
 
 .team-flex{
   display: flex;
-  width: 206px;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: center;
+  gap: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link{
   width: 100%;
@@ -354,7 +353,10 @@ img{
 :focus {
   background-color: #404bbf;
 }
-
+.team-flex-item{
+  width: 40px;
+  height: 40px;
+}
 .team-icon-link {
   fill: #f4f4fd;
   transition-property: fill;
@@ -364,6 +366,39 @@ img{
 
 .team-link:hover .team-icon-link {
   fill: #ffffff;
+}
+
+/* customers [5] */
+
+.customers{
+  padding: 120px 0;
+}
+
+.customers-title{
+  font-size: 36px;
+  line-height: 1.11;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.customers-list{
+  display: flex;
+  gap: 24px;
+}
+
+.customers-item{
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+
+.customers-link{
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  color: #8e8f99;
 }
 
 /* footer */
