--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,6 @@ img{
   margin-right: 76px;
 }
 
-
 .header-list{
   display: flex;
   gap: 40px;
@@ -162,7 +161,7 @@ img{
   background-size: cover;
   background-position: center; 
   background-repeat: no-repeat;
-  /* max-width: 1440px; */
+  max-width: 1440px;
 }
 
 .hero-title {
@@ -199,7 +198,6 @@ img{
 }
 
 /* section [2] */
-
 .features{
   padding: 120px 0;
 }
@@ -350,7 +348,7 @@ img{
   
 }
 .team-link:hover,
-:focus {
+.team-link:focus {
   background-color: #404bbf;
 }
 .team-flex-item{
@@ -369,7 +367,6 @@ img{
 }
 
 /* customers [5] */
-
 .customers{
   padding: 120px 0;
 }
@@ -398,13 +395,32 @@ img{
   border-radius: 4px;
   display: flex;
   align-items: center;
+  justify-content: center;
   color: #8e8f99;
 }
 
+.customers-link:hover,
+.customers-link:focus{
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
+.customers-svg{
+  fill: currentColor;
+}
 /* footer */
 .footer {
   background-color:#2e2f42;
   padding: 100px 0;
+}
+
+.footer-container{
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-box{
+  margin-right: 120px;
 }
 
 .footer-logo {
@@ -429,6 +445,105 @@ img{
   letter-spacing: 0.02em;
   max-width: 264px;
 } 
+
+.footer-social-text{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-link{
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-social-link:hover,
+.footer-social-link:focus{
+  background-color: #31d0aa;
+}
+
+.footer-social-svg{
+  fill: #f4f4fd;
+}
+
+/* modal window */
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 408px;
+  min-height: 584px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
+  0px 1px 3px rgba(0, 0, 0, 0.12), 
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  border-radius: 4px;
+}
+
+.button-modal-close{
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal-close:hover,
+.button-modal-close:focus{
+  background-color: #404bbf;
+  border: none;
+  fill: #F4F4FD;
+}
+
+.button-close-svg{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
 /* Portfolio */
