--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,7 @@ img{
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover,
 .team-link:focus {
@@ -386,6 +386,8 @@ img{
 .customers-item{
   width: calc((100% - 120px) / 6);
   height: 88px;
+  transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link{
@@ -473,6 +475,7 @@ img{
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:hover,
 .footer-social-link:focus{
@@ -514,6 +517,7 @@ img{
   0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-modal-close{
@@ -535,7 +539,7 @@ img{
 }
 
 .button-modal-close:hover,
-.button-modal-close:focus{
+.button-modal-close:focus  {
   background-color: #404bbf;
   border: none;
   fill: #F4F4FD;
@@ -544,6 +548,7 @@ img{
 .button-close-svg{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 
 /* Portfolio */
