--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ img{
 }
 
 .link_current {
-  color: var(--ocean);
+  color: #404BBF;
   position: relative;
 }
 
@@ -162,6 +162,8 @@ img{
   background-position: center; 
   background-repeat: no-repeat;
   max-width: 1440px;
+  /*  */
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -633,15 +635,15 @@ img{
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--navyblue);
+  color: #2E2F42;
   margin-bottom: 8px;
 }
 
 .portfolio-apps {
   font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--slate);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
 }
 
 .wrapper{
@@ -664,9 +666,9 @@ img{
   top: 0;
   left: 0;
   margin: 0;
-  padding: 63px 24px;
-  background-color: var(--iris);
-  color: var(--cloud);
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;;
   width: 100%;
   height: 100%;
   transform: translate(0, 100%);
@@ -674,6 +676,8 @@ img{
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .portfolio-list .portfolio-link:hover .text-overlay {
